--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "node": ">=24.0.0"
   },
   "dependencies": {
+    "@fastify/compress": "^8.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/rate-limit": "^10.3.0",
     "bcryptjs": "^3.0.3",
     "fastify": "^5.7.1",
     "jsonwebtoken": "^9.0.3",
